--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="demo.zouyan.com.socketdemo.MainActivity">
+    <View android:layout_height="0dp"
+        android:id="@+id/SysStatusBar"
+        android:layout_width="match_parent"/>
+
     <ListView
         android:id="@+id/lv_danmu"
+        android:layout_below="@id/SysStatusBar"
         android:layout_width="match_parent"
         android:transcriptMode="alwaysScroll"
-        android:layout_height="match_parent"></ListView>
-</LinearLayout>
+    android:layout_height="match_parent"></ListView>
+    <LinearLayout
+        android:id="@+id/ll_head"
+        android:orientation="horizontal"
+        android:layout_below="@id/SysStatusBar"
+        android:background="@android:color/holo_red_light"
+        android:layout_width="match_parent"
+        android:layout_centerVertical="true"
+        android:visibility="gone"
+        android:layout_height="50dp">
+        <TextView
+            android:id="@+id/tv_nn"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_txt"
+            android:layout_width="wrap_content"
+            android:textSize="18sp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</RelativeLayout>
